# supervoxtral

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: capturing-system-audio.md  configuration-reference.md
svx/: __init__.py  cli.py
svx/core/: __init__.py  audio.py  chunking.py  clipboard.py  config.py  formatting.py  level_monitor.py  meeting_audio.py  pipeline.py  prompt.py  storage.py  user_config.py
svx/providers/: __init__.py  base.py  mistral.py
svx/ui/: qt_app.py  tk_app.py
