[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supervoxtral"
version = "0.1.4"
description = "CLI/GUI audio recorder and transcription client using Mistral Voxtral (chat with audio and transcription)."
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = [
  "transcription",
  "audio",
  "mistral",
  "voxtral",
  "whisper",
  "cli",
  "gui",
]
dependencies = [
  "typer",
  "rich",
  "sounddevice",
  "soundfile",
  "python-dotenv",
  "pyperclip",
  "mistralai",
]

[project.optional-dependencies]
gui = ["PySide6-Essentials"]
dev = ["black", "ruff", "mypy", "types-python-dotenv", "pytest"]

[project.scripts]
svx = "svx.cli:app"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.hatch.build.targets.wheel]
packages = ["svx"]

[tool.basedpyright]
typeCheckingMode = "standard"  # "basic" | "standard" | "strict" (défaut: "standard")
# reportUnknownArgumentType = false
# reportUnknownVariableType = false
# reportUnusedCallResult = false
# reportUnannotatedClassAttribute = false
