[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supervoxtral"
version = "0.9.0"
description = "CLI/GUI audio recorder with 2-step pipeline: transcription (Voxtral) then text transformation (LLM)."
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = [
  "transcription",
  "audio",
  "mistral",
  "voxtral",
  "whisper",
  "cli",
  "gui",
]
dependencies = [
  "typer",
  "rich",
  "sounddevice",
  "soundfile",
  "python-dotenv",
  "pyperclip",
  "mistralai",
]

[project.optional-dependencies]
dev = ["ruff", "basedpyright"]

[project.scripts]
svx = "svx.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.hatch.build.targets.wheel]
packages = ["svx"]

[tool.basedpyright]
typeCheckingMode = "standard"  # "basic" | "standard" | "strict" (défaut: "standard")
reportUnknownParameterType = true
# reportUnknownArgumentType = false
# reportUnknownVariableType = false
# reportUnusedCallResult = false
# reportUnannotatedClassAttribute = false
